--- a/src/cms.njk
+++ b/src/cms.njk
@@ -21,7 +21,7 @@ permalink: "/articuloscms/index.html"
       </div>
 
       <div class="row icon-boxes">
-        {% for articulo in collections.articulos%}
+        {% for articulo in collections.articulo%}
         <div class="col-md-6 col-lg-3 d-flex align-items-center mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
